Change PoW hash type to Blake

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -391,7 +391,10 @@ crypto_libbitcoin_crypto_base_a_SOURCES = \
   crypto/sha512.cpp \
   crypto/sha512.h \
   crypto/siphash.cpp \
-  crypto/siphash.h
+  crypto/siphash.h \
+  crypto/sph_types.h \
+  crypto/sph_blake.h \
+  crypto/sph_blake.c
 
 if USE_ASM
 crypto_libbitcoin_crypto_base_a_SOURCES += crypto/sha256_sse4.cpp
